src-tauri/check_errors_ascii.txt
cargo :    Compiling iracing-career-simulator 
v0.1.0 (C:\Users\rodri\OneDrive\??rea de 
Trabalho\Jogos\iRacerApp V1\src-tauri)
No linha:1 caractere:1
+ cargo check 2>&1 | Out-File -FilePath 
check_errors_ascii.txt -Encodin ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  
     Compiling ir...p V1\src-tauri):String) [  
  ], RemoteException
    + FullyQualifiedErrorId : NativeCommandErr 
   or
 
warning: unused import: `run_market`
  --> src\commands\career.rs:38:61
   |
38 | use crate::market::pipeline::{fill_all_rem
aining_vacancies, run_market};
   |                                           
                  ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `next_id`
 --> src\convocation\pipeline.rs:8:30
  |
8 | use crate::generators::ids::{next_id, 
next_ids, IdType};
  |                              ^^^^^^^

warning: unused imports: `Candidato`, 
`FonteConvocacao`, and `coletar_candidatos`
 --> src\convocation\mod.rs:6:23
  |
6 | pub use eligibility::{coletar_candidatos, 
Candidato, FonteConvocacao};
  |                       ^^^^^^^^^^^^^^^^^^  
^^^^^^^^^  ^^^^^^^^^^^^^^^

warning: unused import: `GridClasse`
 --> src\convocation\mod.rs:9:66
  |
9 |     run_convocation_window, 
run_pos_especial, ConvocationResult, 
GridClasse, PosEspecialResult,
  |                                            
                      ^^^^^^^^^^

warning: unused imports: `Cotas` and 
`calcular_cotas`
  --> src\convocation\mod.rs:11:18
   |
11 | pub use quotas::{calcular_cotas, Cotas};
   |                  ^^^^^^^^^^^^^^  ^^^^^

warning: unused import: 
`scoring::calcular_score`
  --> src\convocation\mod.rs:12:9
   |
12 | pub use scoring::calcular_score;
   |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tier_label`
 --> src\event_interest\mod.rs:5:75
  |
5 |     calculate_expected_event_interest, 
calculate_realized_event_interest, tier_label, 
to_summary,
  |                                            
                               ^^^^^^^^^^

warning: unused imports: 
`ExpectedEventInterest`, `HeadlineStrength`, 
and `InterestTier`
 --> src\event_interest\mod.rs:8:49
  |
8 |     EventInterestContext, 
EventInterestSummary, ExpectedEventInterest, 
HeadlineStrength,
  |                                            
     ^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^
9 |     InterestTier, RealizedEventInterest,
  |     ^^^^^^^^^^^^

error[E0063]: missing fields `categoria_id`, 
`categoria_nome`, `importancia` and 4 other 
fields in initializer of `NewsItem`
   --> src\commands\career.rs:907:25
    |
907 |     let mut news = vec![NewsItem {
    |                         ^^^^^^^^ missing 
`categoria_id`, `categoria_nome`, 
`importancia` and 4 other fields

warning: unused variable: `season_number`
   --> src\convocation\pipeline.rs:161:5
    |
161 |     season_number: i32,
    |     ^^^^^^^^^^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_season_number`
    |
    = note: `#[warn(unused_variables)]` (part 
of `#[warn(unused)]`) on by default

For more information about this error, try 
`rustc --explain E0063`.
warning: `iracing-career-simulator` (lib) 
generated 9 warnings
error: could not compile 
`iracing-career-simulator` (lib) due to 1 
previous error; 9 warnings emitted
